--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</button>
 
 		<button class="iniciar">
-			<p class="sesion"></p>iniciar SeSión
+			<p class="sesion">Iniciar Sesión</p>
 		</button>
 	</div>
 </body>
